syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";

option go_package = "genproto/apis/v1;apis";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option(google.api.http) = {
      post: "/v1/say"
      body: "*"
    };
  }

  rpc CreateXml (XmlRequest) returns (google.api.HttpBody) {
    option(google.api.http) = {
      post: "/v1/xml"
      body: "http_body"
    };
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int64 age = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message XmlRequest {
  string request_id = 1;

  google.api.HttpBody http_body = 2;
}